--- a/sass/blocks/_pagination.scss
+++ b/sass/blocks/_pagination.scss
@@ -61,10 +61,13 @@
 	}
 }
 
-.pages__item_arrow {}
+.pages__item_arrow {
+}
 
-.pages__item_arrow-prev {}
+.pages__item_arrow-prev {
+}
 
-.pages__item_arrow-next {}
+.pages__item_arrow-next {
+}
 
 /* @end */
