--- a/sass/blocks/_tabs.scss
+++ b/sass/blocks/_tabs.scss
@@ -8,17 +8,20 @@
 /* Tabs behavior
   --------------------------------------------------------------------------- */
 
-.js-tab-ln {}
+.js-tab-ln {
+}
 
-.js-tab-ln_selected {}
+.js-tab-ln_selected {
+}
 
-.js-tab-content {}
-
+.js-tab-content {
+}
 
 /* Tabs styles
   --------------------------------------------------------------------------- */
 
-.content-tabs {}
+.content-tabs {
+}
 
 .content-tabs__nav {
 
@@ -32,8 +35,10 @@
 	padding: 0;
 }
 
-.content-tabs__nav__ln {}
+.content-tabs__nav__ln {
+}
 
-.content-tabs__item {}
+.content-tabs__item {
+}
 
 /* @end */
