--- a/sass/page/global/_global.scss
+++ b/sass/page/global/_global.scss
@@ -7,11 +7,13 @@
 
 article, aside, details, figcaption, figure,
 footer, header, hgroup, nav, section {
-	display: block; // Corrects `block` display not defined in IE 9.
+	display: block;
+	// Corrects `block` display not defined in IE 9.
 }
 
 html {
-	-webkit-text-size-adjust: 100%; // Prevents iOS text size adjust after orientation change, without disabling user zoom.
+	-webkit-text-size-adjust: 100%;
+	// Prevents iOS text size adjust after orientation change, without disabling user zoom.
 	-ms-text-size-adjust: 100%;
 }
 
@@ -21,17 +23,15 @@ body {
 	font-family: $baseFontFamily;
 	color: $baseColor;
 	background: $mainBgColor;
-	overflow-y: scroll; // force scroll
-	margin: 0; // Removes default margin.
-
-	.ie6-7 & {
-		overflow-y: auto; // ie sticky footer fix
-	}
+	overflow-y: scroll;
+	// force scroll
+	margin: 0;
+	// Removes default margin.
 }
 
-/* @group selection fixes
-  --------------------------------------------------------------------------- */
-
+///* @group selection fixes
+//  --------------------------------------------------------------------------- */
+//
 // ::-moz-selection {
 // 	text-shadow: none;
 // }
@@ -47,7 +47,10 @@ body {
 // *:target {
 // 	border-bottom: 3px solid rgba(0, 0, 0, .1);
 // }
+//
+///* @end */
 
-/* @end */
+///* Opera speed dial minimized */
+//@media screen and (view-mode: minimized) {}
 
 
