--- a/sass/page/global/_html__forms.scss
+++ b/sass/page/global/_html__forms.scss
@@ -14,20 +14,23 @@ $formRowMargin: 10px;
 
 .form {
 	border: none;
-	margin: 0; // IE7
+	margin: 0;
+	// IE7
 
 	//button,
 	input,
 	select,
 	textarea {
-		margin: 0; // Addresses margins set differently in Firefox 4+, Safari 5, and Chrome
+		margin: 0;
+		// Addresses margins set differently in Firefox 4+, Safari 5, and Chrome
 		padding: 0;
 		vertical-align: baseline;
 	}
 
 	//button,
 	input {
-		line-height: normal; // Addresses Firefox 4+ setting `line-height` on `input` using `!important` in the UA stylesheet.
+		line-height: normal;
+		// Addresses Firefox 4+ setting `line-height` on `input` using `!important` in the UA stylesheet.
 	}
 
 	label {
@@ -40,17 +43,21 @@ $formRowMargin: 10px;
 		//&[type="image"],
 		&[type="submit"],
 		&[type="reset"] {
-			-webkit-appearance: button; //Corrects inability to style clickable 'input' types in iOS
+			-webkit-appearance: button;
+			//Corrects inability to style clickable 'input' types in iOS
 		}
 
 		&[type="checkbox"],
 		&[type="radio"] {
-			box-sizing: border-box; // Addresses box sizing set to `content-box` in IE 8/9.
-			padding: 0; // Removes excess padding in IE 8/9.
-			width: auto !important; // form__item_w* normilize
+			box-sizing: border-box;
+			// Addresses box sizing set to `content-box` in IE 8/9.
+			padding: 0;
+			// Removes excess padding in IE 8/9.
+			width: auto !important;
+			// form__item_w* normilize
 		}
 
-		&[type="radio"]{
+		&[type="radio"] {
 			vertical-align: text-top;
 		}
 
@@ -120,9 +127,12 @@ $formRowMargin: 10px;
 	// }
 
 	textarea {
-		overflow: auto; //Removes default vertical scrollbar in IE6/7/8/9
-		vertical-align: top; //Improves readability and alignment in all browsers
-		height: auto; // overwrite theming on form element
+		overflow: auto;
+		//Removes default vertical scrollbar in IE6/7/8/9
+		vertical-align: top;
+		//Improves readability and alignment in all browsers
+		height: auto;
+		// overwrite theming on form element
 		min-height: 4em;
 		line-height: $base-line-height;
 		padding: 5px $inputPadding;
@@ -130,8 +140,9 @@ $formRowMargin: 10px;
 	}
 
 	select {
-		&[multiple="multiple"]{
-			height: auto; // overwrite theming on form element
+		&[multiple="multiple"] {
+			height: auto;
+			// overwrite theming on form element
 		}
 	}
 
@@ -150,18 +161,22 @@ $formRowMargin: 10px;
 	}
 
 	legend {
-		border: none; // Corrects color not being inherited in IE 8/9.
-		padding: 0; // Remove padding so people aren't caught out if they zero out fieldsets.
+		border: none;
+		// Corrects color not being inherited in IE 8/9.
+		padding: 0;
+		// Remove padding so people aren't caught out if they zero out fieldsets.
 	}
 
 	// generic
 
-	.form__set { // fieldset
+	.form__set {
+		// fieldset
 		position: relative;
 		padding: 20px 0 0;
 	}
 
-	.form__set__legend { // legend
+	.form__set__legend {
+		// legend
 		border: 0;
 		font-size: $h3-font-size;
 		font-weight: bold;
@@ -179,7 +194,8 @@ $formRowMargin: 10px;
 	button,
 	input {
 		&::-moz-focus-inner {
-			border: none; 	// Removes inner padding and border in FF3+ www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/
+			border: none;
+			// Removes inner padding and border in FF3+ www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/
 			padding: 0;
 		}
 	}
@@ -194,7 +210,8 @@ $formRowMargin: 10px;
 
 		button,
 		input {
-			overflow: visible; //Removes inner spacing in IE7 without affecting normal text inputs
+			overflow: visible;
+			//Removes inner spacing in IE7 without affecting normal text inputs
 		}
 	}
 
@@ -245,7 +262,7 @@ $formItemPadding: 10px;
 }
 
 .form__item {
-	float:left;
+	float: left;
 	padding: 0 $formItemPadding 0 0;
 	margin-left: 5px;
 }
@@ -313,7 +330,6 @@ $sbPadding: 2px;
 }
 
 /* @end */
-
 
 // /* ============================================================================
 // 	 input styles IE support
