--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -32,13 +32,16 @@ $containerWidth: 974px;
 // Font configuration
 //  ---------------------------------------------------------------------------
 
-@import "compass/typography/vertical_rhythm"; // http://compass-style.org/reference/compass/typography/vertical_rhythm/
+@import "compass/typography/vertical_rhythm";
+// http://compass-style.org/reference/compass/typography/vertical_rhythm/
 
 $baseFontFamily: $sans;
 $baseFontFamilyMono: $monospSerif;
 
-$base-font-size: 14px; // The font size set on the root html element.
-$base-line-height: 18px; // This line-height determines the basic unit of vertical rhythm.
+$base-font-size: 14px;
+// The font size set on the root html element.
+$base-line-height: 18px;
+// This line-height determines the basic unit of vertical rhythm.
 
 // http://www.modularscale.com by Tim Brown
 // https://github.com/scottkellum/modular-scale by scottkellum
@@ -50,17 +53,20 @@ $h4-font-size: 1 * $base-font-size;
 $h5-font-size: 0.742 * $base-font-size;
 $h6-font-size: 0.618 * $base-font-size;
 
-
 // ============================================================================
 //    Non-semantic grid support
 //=============================================================================
 
 @import "susy";
 
-$total-columns  : 12;             // a 12-column grid
-$column-width   : 4em;            // each column is 4em wide
-$gutter-width   : 1em;            // 1em gutters between columns
-$grid-padding   : $gutter-width;  // grid-padding equal to gutters
+$total-columns: 12;
+// a 12-column grid
+$column-width: 4em;
+// each column is 4em wide
+$gutter-width: 1em;
+// 1em gutters between columns
+$grid-padding: $gutter-width;
+// grid-padding equal to gutters
 
 // ============================================================================
 //    Breakpoints
