--- a/sass/helpers/_mixins.scss
+++ b/sass/helpers/_mixins.scss
@@ -62,7 +62,8 @@
 	(-o-min-device-pixel-ratio: 2.6/2),
 	(-webkit-min-device-pixel-ratio: 1.3), // Google Nexus 7
 	(min-device-pixel-ratio: 1.3),
-	(min-resolution: 1.3dppx) { // on retina, use image that's scaled by 2
+	(min-resolution: 1.3dppx) {
+	// on retina, use image that's scaled by 2
 		background-image: url($image);
 		background-size: $width $height;
 	}
