--- a/sass/includes/_c.scss
+++ b/sass/includes/_c.scss
@@ -30,8 +30,7 @@
 	$media-tablet_portrait,
 	$media-tablet_small,
 	$media-phone_landscape,
-	$media-phone_portrait
-{
+	$media-phone_portrait {
 
 	@media #{$deviceWidth} {
 		.device-visualizer:after {
@@ -104,7 +103,7 @@
 /* @group Action Retina
   --------------------------------------------------------------------------- */
 
-@media  (min--moz-device-pixel-ratio: 1.3),
+@media (min--moz-device-pixel-ratio: 1.3),
 (-o-min-device-pixel-ratio: 2.6/2),
 (-webkit-min-device-pixel-ratio: 1.3),
 (min-device-pixel-ratio: 1.3),
