--- a/sass/page/global/_html__embed.scss
+++ b/sass/page/global/_html__embed.scss
@@ -7,10 +7,12 @@
 
 img {
 	font-size: 1em;
-	color: $baseColor; // alt text style
-	border: none; // remove border if in <a> elem
-	background-color: #ccc;
-	-ms-interpolation-mode: bicubic; // improve IE7's resizing of images http://code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
+	color: $baseColor;
+	// alt text style
+	border: none;
+	// remove border if in <a> elem
+	-ms-interpolation-mode: bicubic;
+	// improve IE7's resizing of images http://code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
 }
 
 //@media #{$media-tablet_small} {
@@ -23,6 +25,6 @@ img {
 object,
 embed,
 video {
-	max-width:100%;
-	height:auto;
+	max-width: 100%;
+	height: auto;
 }
