FIXES: minor. ADDED: spacers styles

--- a/sass/helpers/_mixins.scss
+++ b/sass/helpers/_mixins.scss
@@ -51,8 +51,35 @@
 	text-align: start;
 }
 
+// ============================================================================
+//    Vendor prefix Mixins
+//=============================================================================
+
+@mixin vendor($property, $value) {
+	-webkit-#{$property}: $value;
+	-moz-#{$property}: $value;
+	-ms-#{$property}: $value;
+	-o-#{$property}: $value;
+	#{$property}: $value;
+}
+
+@mixin transition($transition: all linear 200ms) {
+	-webkit-transition: $transition;
+	-moz-transition: $transition;
+	-o-transition: $transition;
+	transition: $transition;
+}
+
+@mixin border-radius($radius: 5px) {
+	-moz-border-radius: $radius;
+	-webkit-border-radius: $radius;
+	-o-border-radius: $radius;
+	border-radius: $radius;
+	-webkit-background-clip: padding-box;
+}
+
 //============================================================================
-//   Retina display alternatives
+//   HIDPI display alternatives
 //============================================================================
 
 //http://37signals.com/svn/posts/3271-easy-retina-ready-images-using-scss
@@ -73,6 +100,39 @@
 //	background: url("logo.png") no-repeat;
 //	@include image-2x("logo2x.png", 100px, 25px);
 //}
+
+// Inspired by Tim Kadlec | Media Query & Asset Downloading Results
+// http://timkadlec.com/2012/04/media-query-asset-downloading-results/
+
+// Inspired by kaelig / hidpi
+// https://github.com/kaelig/hidpi
+// hidpi() is a Sass mixin that serves high resolution graphics to high density (Retina-like) displays
+
+$extension: png !default;
+
+@mixin hidpi($image: false, $extension: $extension) {
+	@if $image {
+		background: url('#{$imgDir}#{$image}.#{$extension}') no-repeat;
+	}
+	@media #{$hidpi} {
+		@if $image {
+			$image-hidpi-fullname: '#{$imgDir}#{$image}_x2.#{$extension}';
+			background: url($image-hidpi-fullname) no-repeat;
+			@content;
+		}
+		@else {
+			@content;
+		}
+	}
+}
+
+@mixin hidpi-image ($image: false, $width: false, $height: false, $extension: $extension) {
+	width: em($width);
+	height: em($height);
+	@include hidpi ($image, $extension) {
+		background-size: em($width) em($height);
+	}
+}
 
 //============================================================================
 //   Create CSS Triangles
@@ -100,55 +160,3 @@
 	}
 // .example { @include css-triangle(5px, #fff, bottom); }
 }
-
-// ============================================================================
-//    Vendor prefix Mixins
-//=============================================================================
-
-@mixin vendor($property, $value) {
-	-webkit-#{$property}: $value;
-	-moz-#{$property}: $value;
-	-ms-#{$property}: $value;
-	-o-#{$property}: $value;
-	#{$property}: $value;
-}
-
-@mixin border-radius($radius: 5px) {
-	-moz-border-radius: $radius;
-	-webkit-border-radius: $radius;
-	-o-border-radius: $radius;
-	border-radius: $radius;
-	-webkit-background-clip: padding-box;
-}
-
-@mixin box-shadow($bshval: 0 0 4px rgba(black, 0.5)) {
-	-moz-box-shadow: $bshval;
-	-webkit-box-shadow: $bshval;
-	-o-box-shadow: $bshval;
-	-box-shadow: $bshval;
-}
-
-@mixin transition($transition: all linear 200ms) {
-	-webkit-transition: $transition;
-	-moz-transition: $transition;
-	-o-transition: $transition;
-	transition: $transition;
-}
-
-//@mixin rotate($deg: 5deg) { // FIXME test
-//	-webkit-transform: rotate($deg);
-//	-moz-transform: rotate($deg);
-//	-o-transform: rotate($deg);
-//	transform: rotate($deg);
-//}
-//
-//@mixin scale($factor: 0.2) {
-//	-webkit-transform: scale($factor);
-//	-moz-transform: scale($factor);
-//	-o-transform: scale($factor);
-//	transform: scale($factor);
-//}
-
-//.test-class {
-//  @include transition(all ease 300ms);
-//}
