--- a/css/style.css
+++ b/css/style.css
@@ -208,7 +208,7 @@ kbd {
 pre {
   background-color: #3a3739;
   color: #ccc;
-  padding: .643em 0 .643em 2em;
+  padding: 0.643em 0 0.643em 2em;
   width: 94%;
   overflow-x: auto;
 }
@@ -217,7 +217,7 @@ kbd {
   font-size: 1em;
   background: #3A3739;
   color: #fff;
-  padding: .2em .3em;
+  padding: 0.2em 0.3em;
   white-space: nowrap;
   border-radius: 4px;
 }
@@ -501,7 +501,7 @@ l-row_flat {
     height: auto;
   }
 
-  .l-page {
+  .l-main-aux {
     min-height: auto;
     margin-bottom: auto;
   }
@@ -593,7 +593,7 @@ dl dd {
 .table th {
   vertical-align: middle;
   padding: 0 0.51429em;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
 }
 thead .table td, thead
 .table th {
@@ -662,7 +662,7 @@ thead .table td, thead
 .form select,
 .form textarea {
   border: 1px solid;
-  border-color: #777 #ccc #ccc;
+  border-color: #777777 #cccccc #cccccc;
   background: #fff;
   padding: 0 5px;
   margin: 0;
@@ -960,7 +960,7 @@ thead .table td, thead
 .region-aside,
 .region-beforecontent,
 .region-undercontent {
-  outline: 1px dashed #ccc;
+  outline: 1px dashed #cccccc;
 }
 
 /* ============================================================================
@@ -1002,16 +1002,16 @@ thead .table td, thead
   display: block;
 }
 
-.i-spacer-10 {
-  padding-bottom: 10px;
+.i-spacer-1 {
+  padding-top: 1.28571em;
 }
 
-.i-spacer-20 {
-  padding-bottom: 20px;
+.i-spacer-2 {
+  padding-top: 2.57143em;
 }
 
-.i-spacer-30 {
-  padding-bottom: 30px;
+.i-spacer-3 {
+  padding-top: 3.85714em;
 }
 
 /* ============================================================================
@@ -1030,49 +1030,49 @@ thead .table td, thead
   display: block;
   padding: 10px;
   color: #000;
-  text-shadow: 0 0 1px #fff;
+  text-shadow: 0 0 1px white;
 }
 
 @media screen and (min-width: 1281px) {
   .device-visualizer:after {
     content: "screen and (min-width:1281px)";
-    background: #764b4f;
+    background: #c7f3da;
   }
 }
 @media screen and (max-width: 1280px) {
   .device-visualizer:after {
     content: "screen and (max-width:1280px)";
-    background: #da9d60;
+    background: #563b10;
   }
 }
 @media screen and (max-width: 1024px) {
   .device-visualizer:after {
     content: "screen and (max-width:1024px)";
-    background: #a2f28f;
+    background: #a35a24;
   }
 }
 @media screen and (max-width: 768px) {
   .device-visualizer:after {
     content: "screen and (max-width:768px)";
-    background: #cf99f5;
+    background: #ae7339;
   }
 }
 @media screen and (max-width: 600px) {
   .device-visualizer:after {
     content: "screen and (max-width:600px)";
-    background: #e67825;
+    background: #16f388;
   }
 }
 @media screen and (max-width: 480px) {
   .device-visualizer:after {
     content: "screen and (max-width:480px)";
-    background: #fe60a5;
+    background: #6d7b8b;
   }
 }
 @media screen and (max-width: 320px) {
   .device-visualizer:after {
     content: "screen and (max-width:320px)";
-    background: #669baf;
+    background: #06dae1;
   }
 }
 /* @end */
@@ -1349,7 +1349,7 @@ thead .table td, thead
   padding: 1em;
 }
 .ie6-7 .modal__window {
-  border: 1px solid #ddd;
+  border: 1px solid #dddddd;
 }
 
 .modal__close-btn {
@@ -1468,7 +1468,7 @@ thead .table td, thead
   line-height: 40px;
 }
 .btn-3el_prim .btn-3el__mid {
-  padding: 0 .4em;
+  padding: 0 0.4em;
 }
 
 .btn-3el_prim_green {
@@ -1501,7 +1501,7 @@ thead .table td, thead
   line-height: 30px;
 }
 .btn-3el_sec .btn-3el__mid {
-  padding: 0 .4em;
+  padding: 0 0.4em;
 }
 
 .btn-3el_sec_green {
@@ -1530,7 +1530,7 @@ form.custom span.custom {
   height: 12px;
   position: relative;
   top: 2px;
-  border: solid 1px #ccc;
+  border: solid 1px #cccccc;
   background: #fff;
   cursor: pointer;
 }
@@ -1720,7 +1720,7 @@ form.custom .custom.disabled {
 
   * {
     background: transparent !important;
-    color: #000 !important;
+    color: black !important;
     text-shadow: none !important;
     filter: none !important;
     -ms-filter: none !important;
@@ -1746,7 +1746,7 @@ form.custom .custom.disabled {
   a,
   a:link,
   a:visited {
-    color: #444 !important;
+    color: #444444 !important;
     text-decoration: underline !important;
   }
 
