CHANGED: jquery, htmlshiv versions. ADDED: jstyling input styling plugin.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -62,10 +62,7 @@
 // Plugins
 // --------------------------------------------------------------------------
 
-@import "plugins/foundation-custom-form";
-
-//@import "plugins/custom-selectbox";
-//@import "plugins/jquery-checkbox";
+@import "plugins/jstyling";
 //@import "plugins/fancybox";
 
 // Print styles
