--- a/css/style.css
+++ b/css/style.css
@@ -1036,43 +1036,43 @@ thead .table td, thead
 @media screen and (min-width: 1281px) {
   .device-visualizer:after {
     content: "screen and (min-width:1281px)";
-    background: #3c44b8;
+    background: #213a3e;
   }
 }
 @media screen and (max-width: 1280px) {
   .device-visualizer:after {
     content: "screen and (max-width:1280px)";
-    background: #c68029;
+    background: #e6afd2;
   }
 }
 @media screen and (max-width: 1024px) {
   .device-visualizer:after {
     content: "screen and (max-width:1024px)";
-    background: #2dc1da;
+    background: #b17307;
   }
 }
 @media screen and (max-width: 768px) {
   .device-visualizer:after {
     content: "screen and (max-width:768px)";
-    background: #ccb154;
+    background: #8bdcf3;
   }
 }
 @media screen and (max-width: 600px) {
   .device-visualizer:after {
     content: "screen and (max-width:600px)";
-    background: #64e338;
+    background: #4dca17;
   }
 }
 @media screen and (max-width: 480px) {
   .device-visualizer:after {
     content: "screen and (max-width:480px)";
-    background: #84f23f;
+    background: #d7d701;
   }
 }
 @media screen and (max-width: 320px) {
   .device-visualizer:after {
     content: "screen and (max-width:320px)";
-    background: #eb26d5;
+    background: #3b81a5;
   }
 }
 /* @end */
@@ -1522,195 +1522,216 @@ thead .table td, thead
 }
 
 /* @end */
-/* Custom Forms ----------------------*/
-form.custom {
-  /* Custom input, disabled */
-}
-form.custom span.custom {
-  display: inline-block;
-  width: 12px;
-  height: 12px;
-  position: relative;
-  top: 2px;
-  border: solid 1px #cccccc;
-  background: #fff;
-  cursor: pointer;
-}
-form.custom span.custom.radio {
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -o-border-radius: 100%;
-  -ms-border-radius: 100%;
-  border-radius: 100%;
-}
-form.custom span.custom.checkbox:before {
-  content: "\00d7";
-  display: block;
-  line-height: 0.8;
-  height: 12px;
-  width: 12px;
-  text-align: center;
-  position: absolute;
-  top: 0;
-  left: 0;
-  font-size: 13px;
-  color: #fff;
-}
-form.custom span.custom.radio.checked:before {
-  content: "";
-  display: block;
-  width: 8px;
-  height: 8px;
-  -moz-border-radius: 100%;
-  -webkit-border-radius: 100%;
-  -o-border-radius: 100%;
-  -ms-border-radius: 100%;
-  border-radius: 100%;
-  background: #222;
-  position: relative;
-  top: 2px;
-  left: 2px;
-}
-form.custom span.custom.checkbox.checked:before {
-  color: #222;
-}
-form.custom .custom.dropdown {
-  display: block;
-  position: relative;
-  width: auto;
-  height: 1.4em;
-  margin-bottom: 9px;
-  margin-top: 2px;
-}
-form.custom .custom.dropdown a.current {
-  display: block;
-  width: auto;
-  height: 1.4em;
-  line-height: 1.4em;
-  text-decoration: none;
-  padding: 0 21px 0 6px;
-  border: 1px solid;
-  border-color: #777777 #cccccc #cccccc;
-  color: #434343;
-  background-color: #fff;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-form.custom .custom.dropdown a.selector {
-  position: absolute;
-  width: 20px;
-  height: 1.4em;
-  display: block;
-  right: 0;
-  top: 0;
-  border: solid 1px;
-  border-color: #777777 #cccccc #cccccc;
-  background-color: #fff;
-}
-form.custom .custom.dropdown a.selector:after {
-  content: "";
-  display: block;
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  border: solid 5px;
-  border-color: #aaaaaa transparent transparent transparent;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin-top: -2px;
-  margin-left: -5px;
-}
-form.custom .custom.dropdown:hover a.current,
-form.custom .custom.dropdown:hover a.selector, form.custom .custom.dropdown.open a.current,
-form.custom .custom.dropdown.open a.selector {
-  border-color: #777;
-}
-form.custom .custom.dropdown:hover a.selector:after, form.custom .custom.dropdown.open a.selector:after {
-  content: "";
-  display: block;
-  width: 0;
-  height: 0;
-  border: solid 5px;
-  border-color: #222222 transparent transparent transparent;
-}
-form.custom .custom.dropdown.open ul {
-  display: block;
-  z-index: 10;
-}
-form.custom .custom.dropdown.small {
-  width: 134px !important;
-}
-form.custom .custom.dropdown.medium {
-  width: 254px !important;
-}
-form.custom .custom.dropdown.large {
-  width: 434px !important;
-}
-form.custom .custom.dropdown.expand {
-  width: 100% !important;
-}
-form.custom .custom.dropdown.open.small ul {
-  width: 134px !important;
-}
-form.custom .custom.dropdown.open.medium ul {
-  width: 254px !important;
-}
-form.custom .custom.dropdown.open.large ul {
-  width: 434px !important;
-}
-form.custom .custom.dropdown.open.expand ul {
-  width: 100% !important;
-}
-form.custom .custom.dropdown ul {
-  position: absolute;
-  width: auto;
-  display: none;
-  margin: 0;
-  left: 0;
-  top: 22px;
+/**
+ * Customize at your own risk
+ */
+.jstyling-select {
   margin: 0;
   padding: 0;
-  background: #fff;
-  background: rgba(255, 255, 255, 0.95);
-  box-shadow: 0 6px 16px rgba(0, 0, 0, 0.22);
-  border: 1px solid transparent;
-}
-form.custom .custom.dropdown ul li {
-  color: #555;
-  cursor: pointer;
-  padding: 3px 6px;
-  min-height: 16px;
-  line-height: 16px;
-  margin: 0;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  list-style: none;
-}
-form.custom .custom.dropdown ul li.selected {
-  background: darkgrey;
-  color: #000;
-}
-form.custom .custom.dropdown ul li:hover {
-  background-color: #b6b6b6;
-  color: #222;
-}
-form.custom .custom.dropdown ul li.selected:hover {
-  background: darkgrey;
-  cursor: default;
-  color: #000;
-}
-form.custom .custom.dropdown ul.show {
-  display: block;
-}
-form.custom .custom.disabled {
-  background-color: #ddd;
+  position: relative;
+  z-index: 0;
 }
 
-/* Correct FF custom dropdown height */
+.jstyling-select-t {
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.jstyling-select-l {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  display: none;
+  position: absolute;
+  overflow-y: auto;
+  z-index: 1000;
+}
+
+.jstyling-select-l div {
+  list-style: none;
+  display: block;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.jstyling-select.active {
+  z-index: 700;
+}
+
+.jstyling-select.active .jstyling-select-l {
+  display: block;
+}
+
+.jstyling-checkbox, .jstyling-radio {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  z-index: 1;
+}
+
+.jstyling-checkbox input[type=checkbox], .jstyling-radio input[type=radio] {
+  opacity: 0;
+  filter: alpha(opacity=0);
+  z-index: 0;
+}
+
+.jstyling-file {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  position: relative;
+}
+
+.jstyling-file-f {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.jstyling-file-b {
+  position: relative;
+  overflow: hidden;
+}
+
+.jstyling-file input[type=file] {
+  margin: 0;
+  padding: 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/**
+ * This you can customize
+ */
+/* Select wrapper */
+.jstyling-select {
+  width: 240px;
+  border: 1px solid black;
+  cursor: pointer;
+}
+
+/* Select current option */
+.jstyling-select-s {
+  padding: 2px;
+  height: 22px;
+  line-height: 22px;
+  background: url(../images/plugins/jstyling/jcusel-select.png) no-repeat top right;
+}
+
+.jstyling-select-t {
+  width: 202px;
+}
+
+/* Select options list*/
+.jstyling-select-l {
+  max-height: 124px;
+  background: #FFFFFF;
+  border: 1px solid black;
+  border-top: 0;
+  top: 27px;
+  left: -1px;
+}
+
+.jstyling-select-l div {
+  height: 20px;
+  border-top: 1px dotted #cccccc;
+  padding: 2px;
+}
+
+.jstyling-select-l div:hover {
+  background: #eeeeee;
+}
+
+.jstyling-select-l div.disabled {
+  background: #E5E5E5;
+}
+
+.jstyling-select-l div.disabled:hover {
+  color: #000000;
+}
+
+.jstyling-select-l div:first-child {
+  border-top: 0;
+}
+
+.jstyling-select.active {
+  background-position: 100% -28px;
+}
+
+.jstyling-select.disabled {
+  background-color: #E5E5E5;
+}
+
+/* Checkbox */
+.jstyling-checkbox {
+  width: 16px;
+  height: 16px;
+  background: url(../images/plugins/jstyling/jcusel-checkbox-radio.png) no-repeat;
+  vertical-align: middle;
+}
+
+.jstyling-checkbox.active {
+  background-position: 100% -16px;
+}
+
+.jstyling-checkbox.disabled {
+  background-position: 100% -32px;
+}
+
+.jstyling-checkbox.active.disabled {
+  background-position: 100% -48px;
+}
+
+/* Radio button */
+.jstyling-radio {
+  width: 16px;
+  height: 16px;
+  background: url(../images/plugins/jstyling/jcusel-checkbox-radio.png) no-repeat;
+  background-position: 100% -64px;
+  vertical-align: middle;
+}
+
+.jstyling-radio.active {
+  background-position: 100% -80px;
+}
+
+.jstyling-radio.disabled {
+  background-position: 100% -96px;
+}
+
+.jstyling-radio.active.disabled {
+  background-position: 100% -112px;
+}
+
+/* File input */
+.jstyling-file-f {
+  padding: 2px 2px;
+  width: 200px;
+  float: left;
+  border: 1px solid #cccccc;
+  height: 20px;
+}
+
+.jstyling-file-b {
+  margin-left: 4px;
+  padding: 2px 2px;
+  width: 80px;
+  float: left;
+  border: 1px solid #cccccc;
+  height: 20px;
+  background: #eee;
+  text-align: center;
+}
+
+.ie6-7 .jcusel-checkbox,
+.ie6-7 .jcusel-radio {
+  display: inline;
+  zoom: 1;
+}
+
 @media print {
   /* ============================================================================
   		MEDIA PRINT
